# FDL-FLOWER

./: README.md  pyproject.toml
my_awesome_app/: client_app.py  model.py  server_app.py  tag_min_max.pkl  task.py  test.py
